# eth-light-client

./: .gitignore  AGENT_WORKFLOW.md  CLAUDE.md  Cargo.toml  INVARIANTS.md  ONE_SHOT_PLAN.md  README.md
docs/: agent_context.md  architecture.md
scripts/: warner-check.sh
src/: README.md  config.rs  error.rs  lib.rs  light_client.rs  test_utils.rs
src/config/: tests.rs
src/consensus/: README.md  beacon.rs  bls.rs  bls_spec_tests.rs  light_client.rs  light_client_spec_tests.rs  merkle.rs  mod.rs  processor.rs  store.rs  sync_committee.rs
src/test_utils/: README.md  fork.rs  loader.rs  mod.rs  raw_ssz.rs  steps.rs
src/types/: consensus.rs  mod.rs  primitives.rs  ssz.rs
src/types/consensus/: committee.rs  headers.rs  messages.rs
tests/: BLS_TESTING.md  README.md  light_client_sync.rs
tests/fixtures/: README.md
tests/fixtures/minimal/altair/light_client/sync/light_client_sync/: config.yaml
tests/fixtures/minimal/bellatrix/light_client/sync/light_client_sync/: config.yaml
tests/fixtures/minimal/capella/light_client/sync/light_client_sync/: config.yaml
tickets/: PR10_commit2_finalized_rotation.md  README.md  _template.md
tickets/backlog/: PR14_eliminate_store_tracker_drift.md
