[package]
name = "eth-light-client"
version = "0.1.0"
edition = "2021"
# authors = ["Echo echoalice0@gmail.com"]
description = "Verification-only Ethereum consensus-layer light client"
license = "MIT OR Apache-2.0"
# repository = "https://github.com/yourusername/eth-light-client"
keywords = ["ethereum", "blockchain", "light-client", "consensus"]
categories = ["ethereum", "blockchain", "cryptography", "network-programming"]
resolver = "2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
blst = "0.3.10" 
ethereum_ssz = "0.5" 
ethereum_ssz_derive = "0.5" 
tree_hash = "0.5"
tree_hash_derive = "0.5" 
ethereum_hashing = "1.0.0-beta.2" 
thiserror = "1.0"
ssz_types = "0.5"
ethereum-types = "0.14"

[features]
default = []
# Not part of the stable API - may change without notice.
test-utils = ["dep:serde_yaml", "dep:snap"]

[dependencies.serde_yaml]
version = "0.9"
optional = true

[dependencies.snap]
version = "1.1"
optional = true

# Testing
[dev-dependencies]
serde_yaml = "0.9"
walkdir = "2.4"
snap = "1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
